[package]
name = "kvs"
version = "0.1.0"
authors = ["slh <690302166@qq.com>"]
edition = "2018"
description = "A simple in-memory key value store"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = "2.33.1"
structopt = "0.3.14"
failure = "0.1.8"
